--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ main{
  .banner {
    display: flex;
       gap: 10px;
-   padding: 10px;
+   padding: 5px;
    flex-wrap: wrap;
   justify-content:space-between;
  }
@@ -68,7 +68,7 @@ main{
  .banner img {
    width: 300px;
    height: 400px;
-/*    object-fit: cover; */
+   object-fit: cover;
    border-radius: 5px;
  }
 
