--- a/style.css
+++ b/style.css
@@ -60,9 +60,9 @@ main{
  .banner {
    display: flex;
       gap: 10px;
-   padding: 5px;
+   padding: 10px;
    flex-wrap: wrap;
-  justify-content:space-between;
+  justify-content:space-around;
  }
 
  .banner img {
