--- a/style.css
+++ b/style.css
@@ -62,11 +62,11 @@ main{
       gap: 10px;
    padding: 10px;
    flex-wrap: wrap;
-  justify-content:space-around;
+  justify-content:center;
  }
 
  .banner img {
-   width: 300px;
+   width: 290px;
    height: 400px;
    object-fit: cover;
    border-radius: 5px;
